# vectordb-from-scratch

./: .gitignore  Cargo.toml  LICENSE  README.md  SETUP_COMPLETE.md  flake.nix
benches/: hnsw_bench.rs  search_bench.rs
examples/: demo.sh
src/: distance.rs  error.rs  flat_index.rs  index.rs  lib.rs  main.rs  metrics.rs  storage.rs  vector.rs
src/hnsw/: graph.rs  mod.rs  neighbor_queue.rs
src/persistence/: engine.rs  mmap.rs  mod.rs  serialization.rs  snapshot.rs  wal.rs
src/server/: mod.rs  routes.rs
tests/: integration_test.rs  recall_test.rs
