[package]
name = "vectordb_from_scratch"
version = "0.1.0"
edition = "2021"
authors = ["Ricardo Ledan"]
description = "A vector database built from scratch in Rust for learning purposes"
license = "MIT"

[dependencies]
ndarray = "0.15"
ndarray-rand = "0.14"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
thiserror = "1.0"
anyhow = "1.0"
rayon = "1.8"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.4"
approx = "0.5"
tempfile = "3.8"
rand = "0.8"

[[bench]]
name = "search_bench"
harness = false
